grammars/tree-sitter/test/corpus/jsx.txt
==================
JSX Attributes
==================

fragment App() {
  <div class="container" id={id} {...props} />
}

---

(program
  (fragment_declaration
    name: (identifier)
    parameters: (formal_parameters)
    body: (component_body
      (component_statement
        (expression_statement
          (jsx_self_closing_element
            name: (jsx_non_namespaced_element_name
              (identifier))
            attribute: (jsx_attribute
              name: (identifier)
              value: (string))
            attribute: (jsx_attribute
              name: (identifier)
              value: (jsx_expression
                (component_statement
                  (expression_statement
                    (identifier)))))
            attribute: (jsx_expression
              (identifier))))))))

==================
Ref Attribute
==================

fragment App() {
  <div ref={(node) => console.log(node)}>{'content'}</div>
}

---

(program
  (fragment_declaration
    name: (identifier)
    parameters: (formal_parameters)
    body: (component_body
      (component_statement
        (expression_statement
          (jsx_element
            open_tag: (jsx_opening_element
              name: (jsx_element_name
                (identifier))
              attribute: (jsx_attribute
                name: (identifier)
                value: (jsx_expression
                  (component_statement
                    (expression_statement
                      (arrow_function
                        parameters: (formal_parameters
                          (required_parameter
                            pattern: (identifier)))
                        body: (call_expression
                          function: (member_expression
                            object: (identifier)
                            property: (identifier))
                          arguments: (arguments
                            (identifier)))))))))
            children: (jsx_expression
              (component_statement
                (expression_statement
                  (string))))
            close_tag: (jsx_closing_element
              name: (jsx_element_name
                (identifier)))))))))

==================
JSX Member Expression
==================

fragment App() {
  <Namespace.Component />
  <obj.trackedProp />
}

---

(program
  (fragment_declaration
    name: (identifier)
    parameters: (formal_parameters)
    body: (component_body
      (component_statement
        (jsx_self_closing_element
          name: (jsx_non_namespaced_element_name
            (jsx_member_name
              (identifier)
              (identifier)))))
      (component_statement
        (expression_statement
          (jsx_self_closing_element
            name: (jsx_non_namespaced_element_name
              (jsx_member_name
                (identifier)
                (identifier)))))))))

==================
JSX Fragment
==================

fragment App() {
  <><span>{'one'}</span><span>{'two'}</span></>
  const title = <><span>{'hello'}</span></>;
}

---

(program
  (fragment_declaration
    name: (identifier)
    parameters: (formal_parameters)
    body: (component_body
      (component_statement
        (expression_statement
          (jsx_fragment
            open_tag: (jsx_opening_fragment)
            children: (jsx_element
              open_tag: (jsx_opening_element
                name: (jsx_element_name
                  (identifier)))
              children: (jsx_expression
                (component_statement
                  (expression_statement
                    (string))))
              close_tag: (jsx_closing_element
                name: (jsx_element_name
                  (identifier))))
            children: (jsx_element
              open_tag: (jsx_opening_element
                name: (jsx_element_name
                  (identifier)))
              children: (jsx_expression
                (component_statement
                  (expression_statement
                    (string))))
              close_tag: (jsx_closing_element
                name: (jsx_element_name
                  (identifier))))
            close_tag: (jsx_closing_fragment))))
      (component_statement
        (variable_declaration
          (variable_declarator
            name: (identifier)
            (initializer
              (jsx_fragment
                open_tag: (jsx_opening_fragment)
                children: (jsx_element
                  open_tag: (jsx_opening_element
                    name: (jsx_element_name
                      (identifier)))
                  children: (jsx_expression
                    (component_statement
                      (expression_statement
                        (string))))
                  close_tag: (jsx_closing_element
                    name: (jsx_element_name
                      (identifier))))
                close_tag: (jsx_closing_fragment)))))))))

=========================================
Parenthesized JSX Arrow Return Attributes
=========================================

export function Test(props) {
  return <>
    <List
      nativeItem={(item) => (
        <div>
          <ItemView item={item} onSelect={props.onSelect} />
        </div>
      )}
      fragmentItem={(item) => (
        <>
          <ItemView item={item} onSelect={props.onSelect} />
        </>
      )}
    />
  </>;
}

---

(program
  (export_statement
    (function_declaration
      name: (identifier)
      parameters: (formal_parameters
        (required_parameter
          pattern: (identifier)))
      body: (statement_block
        (return_statement
          (jsx_fragment
            open_tag: (jsx_opening_fragment)
            children: (jsx_text)
            children: (jsx_self_closing_element
              name: (jsx_non_namespaced_element_name
                (identifier))
              attribute: (jsx_attribute
                name: (identifier)
                value: (jsx_expression
                  (component_statement
                    (expression_statement
                      (arrow_function
                        parameters: (formal_parameters
                          (required_parameter
                            pattern: (identifier)))
                        body: (parenthesized_expression
                          (jsx_element
                            open_tag: (jsx_opening_element
                              name: (jsx_element_name
                                (identifier)))
                            children: (jsx_text)
                            children: (jsx_self_closing_element
                              name: (jsx_non_namespaced_element_name
                                (identifier))
                              attribute: (jsx_attribute
                                name: (identifier)
                                value: (jsx_expression
                                  (component_statement
                                    (expression_statement
                                      (identifier)))))
                              attribute: (jsx_attribute
                                name: (identifier)
                                value: (jsx_expression
                                  (component_statement
                                    (expression_statement
                                      (member_expression
                                        object: (identifier)
                                        property: (identifier)))))))
                            children: (jsx_text)
                            close_tag: (jsx_closing_element
                              name: (jsx_element_name
                                (identifier))))))))))
              attribute: (jsx_attribute
                name: (identifier)
                value: (jsx_expression
                  (component_statement
                    (expression_statement
                      (arrow_function
                        parameters: (formal_parameters
                          (required_parameter
                            pattern: (identifier)))
                        body: (parenthesized_expression
                          (jsx_fragment
                            open_tag: (jsx_opening_fragment)
                            children: (jsx_text)
                            children: (jsx_self_closing_element
                              name: (jsx_non_namespaced_element_name
                                (identifier))
                              attribute: (jsx_attribute
                                name: (identifier)
                                value: (jsx_expression
                                  (component_statement
                                    (expression_statement
                                      (identifier)))))
                              attribute: (jsx_attribute
                                name: (identifier)
                                value: (jsx_expression
                                  (component_statement
                                    (expression_statement
                                      (member_expression
                                        object: (identifier)
                                        property: (identifier)))))))
                            children: (jsx_text)
                            close_tag: (jsx_closing_fragment)))))))))
            children: (jsx_text)
            close_tag: (jsx_closing_fragment)))))))

==================
Style Element
==================

fragment App() {
  <div>{'content'}</div>
  <style>
    div { color: red; }
  </style>
}

---

(program
  (fragment_declaration
    name: (identifier)
    parameters: (formal_parameters)
    body: (component_body
      (component_statement
        (jsx_element
          open_tag: (jsx_opening_element
            name: (jsx_element_name
              (identifier)))
          children: (jsx_expression
            (component_statement
              (expression_statement
                (string))))
          close_tag: (jsx_closing_element
            name: (jsx_element_name
              (identifier)))))
      (component_statement
        (style_element
          (raw_text))))))

========================
Style Element Expression
========================

const styles = <style>
  .modular {
    color: green;
  }
</style>;

---

(program
  (variable_declaration
    (variable_declarator
      name: (identifier)
      (initializer
        (style_element
          (raw_text))))))

=====================================
Style Element Expression In Parentheses
=====================================

const theme = (
  <style>
    .done {
      color: red;
    }
  </style>
);

---

(program
  (variable_declaration
    (variable_declarator
      (identifier)
      (initializer
        (parenthesized_expression
          (style_element
            (raw_text)))))))

================================
Style Element Export Default
================================

export default (
  <style>
    .a {
      color: red;
    }
  </style>
);

---

(program
  (export_statement
    (parenthesized_expression
      (style_element
        (raw_text)))))

==================================
Style Element Expression Positions
==================================

function themed() {
  return <style>.a { color: red; }</style>;
}
const arrow = () => <style>.a { color: red; }</style>;
use(<style>.a { color: red; }</style>);
const list = [<style>.a { color: red; }</style>];
const picked = dark ? <style>.a { color: red; }</style> : null;
const map = { theme: <style>.a { color: red; }</style> };

---

(program
  (function_declaration
    (identifier)
    (formal_parameters)
    (statement_block
      (return_statement
        (style_element
          (raw_text)))))
  (variable_declaration
    (variable_declarator
      (identifier)
      (initializer
        (arrow_function
          (formal_parameters)
          (style_element
            (raw_text))))))
  (expression_statement
    (call_expression
      (identifier)
      (arguments
        (style_element
          (raw_text)))))
  (variable_declaration
    (variable_declarator
      (identifier)
      (initializer
        (array
          (style_element
            (raw_text))))))
  (variable_declaration
    (variable_declarator
      (identifier)
      (initializer
        (ternary_expression
          (identifier)
          (style_element
            (raw_text))
          (null)))))
  (variable_declaration
    (variable_declarator
      (identifier)
      (initializer
        (object
          (pair
            (property_name
              (identifier))
            (style_element
              (raw_text))))))))

=====================================
Style Element Body With Less-Than
=====================================

function App() @{
  <>
    <style>
      /* a < b */
      @media (width < 600px) {
        div::before { content: '<'; }
      }
    </style>
    <div />
  </>
}

---

(program
  (function_declaration
    (identifier)
    (formal_parameters)
    (jsx_statement_container
      (jsx_fragment
        (jsx_opening_fragment)
        (jsx_text)
        (style_element
          (raw_text))
        (jsx_text)
        (jsx_self_closing_element
          (jsx_non_namespaced_element_name
            (identifier)))
        (jsx_text)
        (jsx_closing_fragment)))))

=====================================
Script Element Expression In Parentheses
=====================================

const script = (
  <script>
    if (a < b) go();
  </script>
);

---

(program
  (variable_declaration
    (variable_declarator
      (identifier)
      (initializer
        (parenthesized_expression
          (script_element
            (raw_text)))))))

====================================
Style Element Self Closing With Apply
====================================

function App() @{
  <style apply={theme} />
  <div />
}

---

(program
  (function_declaration
    (identifier)
    (formal_parameters)
    (jsx_statement_container
      (style_element
        (jsx_attribute
          (identifier)
          (jsx_expression
            (component_statement
              (expression_statement
                (identifier))))))
      (jsx_self_closing_element
        (jsx_non_namespaced_element_name
          (identifier))))))

===============================
Style Element Apply Array
===============================

function App() @{
  <style apply={[base, theme]} />
  <div />
}

---

(program
  (function_declaration
    (identifier)
    (formal_parameters)
    (jsx_statement_container
      (style_element
        (jsx_attribute
          (identifier)
          (jsx_expression
            (component_statement
              (expression_statement
                (array
                  (identifier)
                  (identifier)))))))
      (jsx_self_closing_element
        (jsx_non_namespaced_element_name
          (identifier))))))

=====================================
Style Element Body With Attributes
=====================================

function App() @{
  <style apply={theme} data-scope="card">
    .card { color: red; }
  </style>
  <div />
}

---

(program
  (function_declaration
    (identifier)
    (formal_parameters)
    (jsx_statement_container
      (style_element
        (jsx_attribute
          (identifier)
          (jsx_expression
            (component_statement
              (expression_statement
                (identifier)))))
        (jsx_attribute
          (jsx_hyphenated_name
            (identifier)
            (identifier))
          (string))
        (raw_text))
      (jsx_self_closing_element
        (jsx_non_namespaced_element_name
          (identifier))))))

=====================================
Multiple Style Elements In Fragment
=====================================

function App() @{
  <>
    <style>.a { color: red; }</style>
    <style apply={theme} />
    <div />
  </>
}

---

(program
  (function_declaration
    (identifier)
    (formal_parameters)
    (jsx_statement_container
      (jsx_fragment
        (jsx_opening_fragment)
        (jsx_text)
        (style_element
          (raw_text))
        (jsx_text)
        (style_element
          (jsx_attribute
            (identifier)
            (jsx_expression
              (component_statement
                (expression_statement
                  (identifier))))))
        (jsx_text)
        (jsx_self_closing_element
          (jsx_non_namespaced_element_name
            (identifier)))
        (jsx_text)
        (jsx_closing_fragment)))))

============================================
Style Siblings Around Statement Container Output
============================================

function App() @{
  const x = 1;
  <style>.a { color: red; }</style>
  <div>{x}</div>
  <style apply={theme} />
}

---

(program
  (function_declaration
    (identifier)
    (formal_parameters)
    (jsx_statement_container
      (variable_declaration
        (variable_declarator
          (identifier)
          (initializer
            (number))))
      (style_element
        (raw_text))
      (jsx_element
        (jsx_opening_element
          (jsx_element_name
            (identifier)))
        (jsx_expression
          (component_statement
            (expression_statement
              (identifier))))
        (jsx_closing_element
          (jsx_element_name
            (identifier))))
      (style_element
        (jsx_attribute
          (identifier)
          (jsx_expression
            (component_statement
              (expression_statement
                (identifier)))))))))

===================================
Style Siblings Inside If Body
===================================

function App() @{
  <div>
    @if (open) {
      <style apply={theme} />
      <span />
      <style>span { color: red; }</style>
    } @else {
      <style apply={fallback} />
    }
  </div>
}

---

(program
  (function_declaration
    (identifier)
    (formal_parameters)
    (jsx_statement_container
      (jsx_element
        (jsx_opening_element
          (jsx_element_name
            (identifier)))
        (jsx_if_expression
          (parenthesized_expression
            (identifier))
          (jsx_template_block
            (style_element
              (jsx_attribute
                (identifier)
                (jsx_expression
                  (component_statement
                    (expression_statement
                      (identifier))))))
            (jsx_self_closing_element
              (jsx_non_namespaced_element_name
                (identifier)))
            (style_element
              (raw_text)))
          (jsx_else_clause
            (jsx_template_block
              (style_element
                (jsx_attribute
                  (identifier)
                  (jsx_expression
                    (component_statement
                      (expression_statement
                        (identifier)))))))))
        (jsx_text)
        (jsx_closing_element
          (jsx_element_name
            (identifier)))))))

============================
Function Return Native Markup
============================

function MyApp() {
  return <div />;
}

function WithFragment() {
  return <>
    <span>ok</span>
    <style>
      span { color: red; }
    </style>
  </>;
}

---

(program
  (function_declaration
    name: (identifier)
    parameters: (formal_parameters)
    body: (statement_block
      (return_statement
        (jsx_self_closing_element
          name: (jsx_non_namespaced_element_name
            (identifier))))))
  (function_declaration
    name: (identifier)
    parameters: (formal_parameters)
    body: (statement_block
      (return_statement
        (jsx_fragment
          open_tag: (jsx_opening_fragment)
          children: (jsx_text)
          children: (jsx_element
            open_tag: (jsx_opening_element
              name: (jsx_element_name
                (identifier)))
            children: (jsx_text)
            close_tag: (jsx_closing_element
              name: (jsx_element_name
                (identifier))))
          children: (jsx_text)
          children: (style_element
            (raw_text))
          children: (jsx_text)
          close_tag: (jsx_closing_fragment))))))

====================================
Function Return Native Control Flow
====================================

function WithControlFlow(x) {
  return <>
    @if (x) {
      <div>works</div>
    } @else {
      {null}
    }
  </>;
}

---

(program
  (function_declaration
    name: (identifier)
    parameters: (formal_parameters
      (required_parameter
        pattern: (identifier)))
    body: (statement_block
      (return_statement
        (jsx_fragment
          open_tag: (jsx_opening_fragment)
          children: (jsx_if_expression
            condition: (parenthesized_expression
              (identifier))
            consequence: (jsx_template_block
              children: (jsx_element
                open_tag: (jsx_opening_element
                  name: (jsx_element_name
                    (identifier)))
                children: (jsx_text)
                close_tag: (jsx_closing_element
                  name: (jsx_element_name
                    (identifier)))))
            (jsx_else_clause
              alternative: (jsx_template_block
                statement: (statement_block
                  (expression_statement
                    (null))))))
          children: (jsx_text)
          close_tag: (jsx_closing_fragment))))))

==================
Statement Container Child
==================

const App = () => <>
  @{
    <div>Ready</div>
  }
</>;

---

(program
  (variable_declaration
    (variable_declarator
      name: (identifier)
      (initializer
        (arrow_function
          parameters: (formal_parameters)
          body: (jsx_fragment
            open_tag: (jsx_opening_fragment)
            children: (jsx_statement_container
              children: (jsx_element
                open_tag: (jsx_opening_element
                  name: (jsx_element_name
                    (identifier)))
                children: (jsx_text)
                close_tag: (jsx_closing_element
                  name: (jsx_element_name
                    (identifier)))))
            children: (jsx_text)
            close_tag: (jsx_closing_fragment)))))))

==========================================
Function Return Statement Container
==========================================

function WithAsyncDeclaration() {
  return <>@{
    async function load() {
      return 1;
    }

    <>
      async work
    </>
  }</>;
}

---

(program
  (function_declaration
    name: (identifier)
    parameters: (formal_parameters)
    body: (statement_block
      (return_statement
        (jsx_fragment
          open_tag: (jsx_opening_fragment)
          children: (jsx_statement_container
            statement: (function_declaration
              name: (identifier)
              parameters: (formal_parameters)
              body: (statement_block
                (return_statement
                  (number))))
            children: (jsx_fragment
              open_tag: (jsx_opening_fragment)
              children: (jsx_text)
              close_tag: (jsx_closing_fragment)))
          close_tag: (jsx_closing_fragment))))))

==================
Server Module
==================

module server {
  let data = fetchData();
}

fragment App() {
  <div>{'content'}</div>
}

---

(program
  (module_declaration
    name: (identifier)
    body: (module_body
      (variable_declaration
        (variable_declarator
          name: (identifier)
          (initializer
            (call_expression
              function: (identifier)
              arguments: (arguments)))))))
  (fragment_declaration
    name: (identifier)
    parameters: (formal_parameters)
    body: (component_body
      (component_statement
        (expression_statement
          (jsx_element
            open_tag: (jsx_opening_element
              name: (jsx_element_name
                (identifier)))
            children: (jsx_expression
              (component_statement
                (expression_statement
                  (string))))
            close_tag: (jsx_closing_element
              name: (jsx_element_name
                (identifier)))))))))

=================================
Code Element Control Flow Text
=================================

fragment App() {
  <p><code>if</code><code>{'@if'}</code></p>
}

---
